# llmbench

./: .gitignore  LICENCE  README.md  pyproject.toml
.github/workflows/: eval_ci.yml
dashboard/: app.py
llmbench/: __init__.py
llmbench/api/: cli.py  reporter.py  rest.py
llmbench/core/: registry.py  runner.py  runner_multiturn.py  schema.py
llmbench/loaders/: __init__.py  conversations.py
llmbench/metrics/: __init__.py
llmbench/providers/: anthropic_provider.py  base.py
llmbench/store/: db.py
tasks/: open_qa.yaml  sample_conversations.json  sample_qa.json
tests/: test_core.py
