[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchkit"
version = "0.1.0"
description = "LLM evaluation harness with custom metrics, LLM-as-judge, and regression tracking"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name="Aditya" }]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "openai>=1.0",
    "groq>=0.9",
    "anthropic>=0.1",
    "evaluate>=0.4",
    "bert-score>=0.3.13",
    "sentence-transformers>=3.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "streamlit>=1.35",
    "plotly>=5.22",
    "pandas>=2.0",
    "datasets>=2.19",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "nest_asyncio>=1.5",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
llmbench = "llmbench.api.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmbench*"]
